--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
                     <p class="w3-text-grey">
                         With syrup, butter and lots of berries 8.50
                     </p>
+
+                    <h4>Chocolate Muffins</h4>
+                    <p class="w3-text-grey">With white chocolate chips 6.50</p>
                 </div>
 
                 <div class="w3-col l6 w3-padding-large">
